[workspace]
members = [
    "canisters-client",
    "canisters-common",
    "qstash-types",
    "types",
    "sns-validation",
    "grpc-traits",
    "config-keys",
    "config-cf-kv",
    "config-cf-kv-worker",
    "pump-n-dump-common", "metrics", "ml-feed-cache",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.128"
ic-agent = { version = "0.38.1", default-features = false }
types = { package = "yral-types", path = "types" }
canisters-client = { package = "yral-canisters-client", path = "canisters-client" }
pump-n-dump-common = { package = "yral-pump-n-dump-common", path = "pump-n-dump-common" }
grpc-traits = { package = "yral-grpc-traits", path = "grpc-traits" }
candid = "0.10.10"
url = "2.5.4"
web-time = "1.0.0"
thiserror = "2.0.3"
log = "0.4.22"
k256 = { version = "0.13.4", default-features = false, features = ["jwk"] }
yral-identity = { git = "https://github.com/yral-dapp/yral-identity", rev = "adbf4be5cb62a26f2a90032261321bf1df33f08b", default-features = false }
futures-util = "0.3.31"
uuid = { version = "1.11.0", features = ["serde"] }
