[package]
name = "yral-canisters-common"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-agent.workspace = true
canisters-client = { workspace = true, features = ["full"] }
pump-n-dump-common = { workspace = true }
candid.workspace = true
url.workspace = true
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata", rev = "56e3f1f1f5f452673bee17739520c800c1264295", default-features = false }
yral-metadata-types = { git = "https://github.com/yral-dapp/yral-metadata", rev = "56e3f1f1f5f452673bee17739520c800c1264295", default-features = false }
types.workspace = true
sns-validation.path = "../sns-validation"
serde.workspace = true
crc32fast = "1.4.0"
thiserror.workspace = true
log.workspace = true
k256 = { workspace = true, default-features = false }
rust_decimal = "1.36.0"
grpc-traits.workspace = true
web-time.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "http2",
] }
ciborium = "0.2.2"
futures-util.workspace = true
getrandom = "0.2.15"
send_wrapper = { version = "0.6.0", optional = true, features = ["futures"] }

[features]
default = ["rustls-tls"]
local = []
rustls-tls = ["yral-metadata-client/rustls-tls", "reqwest/rustls-tls"]
js = ["getrandom/js", "ic-agent/wasm-bindgen", "dep:send_wrapper"]