[package]
name = "yral-config-cf-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "http2",
] }
yral-config-keys = { path = "../config-keys" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
