[package]
name = "yral-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
trait-variant.workspace = true
candid.workspace = true
log.workspace = true
web-time.workspace = true
serde_with.workspace = true
# serde_json.workspace = true

reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
wasm-bindgen-futures = { version = "0.4.5", optional = true }

# worker = { version = "0.5.0" }

[features]
default = ["reqwest/rustls-tls"]
js = ["reqwest/native-tls", "dep:wasm-bindgen-futures"]
